--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -65,4 +64,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.pdf-viewer canvas {
+  max-width: 100%;
+  height: auto;
 }
